tests/invalid/require_in_asset.prsm
// E013: 'require' fields are only valid inside component declarations
asset BadConfig : ScriptableObject {
    require rb: Rigidbody
}
